// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchForm renders empty 1`] = `
<SearchForm
  className=""
  maxNumOfTagsAdded={false}
  onAddTag={[Function]}
  onSearch={[Function]}
  query=""
  searchResults={null}
>
  <SearchForm__Wrapper
    className=""
  >
    <StyledComponent
      className=""
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SearchForm__Wrapper-hq4lki-3",
            "isStatic": true,
            "lastClassName": "iHdFSK",
            "rules": Array [
              "display:flex;height:24px;",
            ],
          },
          "displayName": "SearchForm__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SearchForm__Wrapper-hq4lki-3",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="SearchForm__Wrapper-hq4lki-3 iHdFSK"
      >
        <SearchForm__Header>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "SearchForm__Header-hq4lki-4",
                  "isStatic": true,
                  "lastClassName": "cqgZMA",
                  "rules": Array [
                    "display:inline-flex;align-items:center;margin-right:12px;",
                  ],
                },
                "displayName": "SearchForm__Header",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "SearchForm__Header-hq4lki-4",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="SearchForm__Header-hq4lki-4 cqgZMA"
            >
              <SearchForm__IconTag>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SearchForm__IconTag-hq4lki-0",
                        "isStatic": true,
                        "lastClassName": "kDtdRH",
                        "rules": Array [
                          "fill:currentColor;height:18px;width:18px;",
                          " margin-right:6px;",
                        ],
                      },
                      "displayName": "SearchForm__IconTag",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SearchForm__IconTag-hq4lki-0",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <_default
                    className="SearchForm__IconTag-hq4lki-0 kDtdRH"
                  >
                    <_default
                      className="SearchForm__IconTag-hq4lki-0 kDtdRH"
                    >
                      <div
                        className="SearchForm__IconTag-hq4lki-0 kDtdRH"
                      />
                    </_default>
                  </_default>
                </StyledComponent>
              </SearchForm__IconTag>
              Tag Wiki Pages
            </div>
          </StyledComponent>
        </SearchForm__Header>
        <SearchForm__AddTagButton
          disabled={false}
          onClick={[Function]}
        >
          <StyledComponent
            disabled={false}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "SearchForm__AddTagButton-hq4lki-5",
                  "isStatic": false,
                  "lastClassName": "drsdNE",
                  "rules": Array [
                    "align-items:center;background:transparent;border:0;color:",
                    [Function],
                    ";cursor:pointer;display:inline-flex;font:inherit;font-weight:",
                    [Function],
                    ";line-height:1;margin:0;padding:0;&:disabled{opacity:.5;pointer-events:none;}",
                  ],
                },
                "displayName": "SearchForm__AddTagButton",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "SearchForm__AddTagButton-hq4lki-5",
                "target": "button",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onClick={[Function]}
          >
            <button
              className="SearchForm__AddTagButton-hq4lki-5 drsdNE"
              disabled={false}
              onClick={[Function]}
            >
              Add Tag
              <SearchForm__IconAdd>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SearchForm__IconAdd-hq4lki-2",
                        "isStatic": true,
                        "lastClassName": "eJupPs",
                        "rules": Array [
                          "fill:currentColor;height:12px;width:12px;margin-left:6px;",
                        ],
                      },
                      "displayName": "SearchForm__IconAdd",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SearchForm__IconAdd-hq4lki-2",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <_default
                    className="SearchForm__IconAdd-hq4lki-2 eJupPs"
                  >
                    <_default
                      className="SearchForm__IconAdd-hq4lki-2 eJupPs"
                    >
                      <div
                        className="SearchForm__IconAdd-hq4lki-2 eJupPs"
                      />
                    </_default>
                  </_default>
                </StyledComponent>
              </SearchForm__IconAdd>
            </button>
          </StyledComponent>
        </SearchForm__AddTagButton>
      </div>
    </StyledComponent>
  </SearchForm__Wrapper>
</SearchForm>
`;

exports[`SearchForm renders with props 1`] = `
<SearchForm
  accentColor="#00f"
  className="foo"
  communityName="bar"
  maxAllowed={3}
  maxNumOfTagsAdded={true}
  onAddTag={[Function]}
  onSearch={[Function]}
  query="q"
  searchResults={
    Array [
      Object {
        "articleId": "1",
        "articleTitle": "Foo",
      },
      Object {
        "articleId": "2",
        "articleTitle": "Bar",
      },
      Object {
        "articleId": "3",
        "articleTitle": "FooBar",
      },
    ]
  }
>
  <SearchForm__Wrapper
    className="foo"
  >
    <StyledComponent
      className="foo"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SearchForm__Wrapper-hq4lki-3",
            "isStatic": true,
            "lastClassName": "iHdFSK",
            "rules": Array [
              "display:flex;height:24px;",
            ],
          },
          "displayName": "SearchForm__Wrapper",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SearchForm__Wrapper-hq4lki-3",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <div
        className="foo SearchForm__Wrapper-hq4lki-3 iHdFSK"
      >
        <SearchForm__Header>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "SearchForm__Header-hq4lki-4",
                  "isStatic": true,
                  "lastClassName": "cqgZMA",
                  "rules": Array [
                    "display:inline-flex;align-items:center;margin-right:12px;",
                  ],
                },
                "displayName": "SearchForm__Header",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "SearchForm__Header-hq4lki-4",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="SearchForm__Header-hq4lki-4 cqgZMA"
            >
              <SearchForm__IconTag>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SearchForm__IconTag-hq4lki-0",
                        "isStatic": true,
                        "lastClassName": "kDtdRH",
                        "rules": Array [
                          "fill:currentColor;height:18px;width:18px;",
                          " margin-right:6px;",
                        ],
                      },
                      "displayName": "SearchForm__IconTag",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SearchForm__IconTag-hq4lki-0",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <_default
                    className="SearchForm__IconTag-hq4lki-0 kDtdRH"
                  >
                    <_default
                      className="SearchForm__IconTag-hq4lki-0 kDtdRH"
                    >
                      <div
                        className="SearchForm__IconTag-hq4lki-0 kDtdRH"
                      />
                    </_default>
                  </_default>
                </StyledComponent>
              </SearchForm__IconTag>
              Tag Wiki Pages
            </div>
          </StyledComponent>
        </SearchForm__Header>
        <SearchForm__AddTagButton
          accentColor="#00f"
          disabled={true}
          onClick={[Function]}
        >
          <StyledComponent
            accentColor="#00f"
            disabled={true}
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "SearchForm__AddTagButton-hq4lki-5",
                  "isStatic": false,
                  "lastClassName": "iQayax",
                  "rules": Array [
                    "align-items:center;background:transparent;border:0;color:",
                    [Function],
                    ";cursor:pointer;display:inline-flex;font:inherit;font-weight:",
                    [Function],
                    ";line-height:1;margin:0;padding:0;&:disabled{opacity:.5;pointer-events:none;}",
                  ],
                },
                "displayName": "SearchForm__AddTagButton",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "SearchForm__AddTagButton-hq4lki-5",
                "target": "button",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
            onClick={[Function]}
          >
            <button
              className="SearchForm__AddTagButton-hq4lki-5 iQayax"
              disabled={true}
              onClick={[Function]}
            >
              Add Tag
              <SearchForm__IconAdd>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SearchForm__IconAdd-hq4lki-2",
                        "isStatic": true,
                        "lastClassName": "eJupPs",
                        "rules": Array [
                          "fill:currentColor;height:12px;width:12px;margin-left:6px;",
                        ],
                      },
                      "displayName": "SearchForm__IconAdd",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SearchForm__IconAdd-hq4lki-2",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <_default
                    className="SearchForm__IconAdd-hq4lki-2 eJupPs"
                  >
                    <_default
                      className="SearchForm__IconAdd-hq4lki-2 eJupPs"
                    >
                      <div
                        className="SearchForm__IconAdd-hq4lki-2 eJupPs"
                      />
                    </_default>
                  </_default>
                </StyledComponent>
              </SearchForm__IconAdd>
            </button>
          </StyledComponent>
        </SearchForm__AddTagButton>
        <SearchForm__MaxTagsAdded>
          <StyledComponent
            forwardedComponent={
              Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "SearchForm__MaxTagsAdded-hq4lki-6",
                  "isStatic": true,
                  "lastClassName": "gDejUO",
                  "rules": Array [
                    "display:inline-flex;align-items:center;margin-left:6px;",
                  ],
                },
                "displayName": "SearchForm__MaxTagsAdded",
                "foldedComponentIds": Array [],
                "render": [Function],
                "styledComponentId": "SearchForm__MaxTagsAdded-hq4lki-6",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              }
            }
            forwardedRef={null}
          >
            <div
              className="SearchForm__MaxTagsAdded-hq4lki-6 gDejUO"
            >
              <SearchForm__IconAlert>
                <StyledComponent
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SearchForm__IconAlert-hq4lki-1",
                        "isStatic": false,
                        "lastClassName": "hVBuCK",
                        "rules": Array [
                          "fill:currentColor;height:18px;width:18px;",
                          " fill:",
                          [Function],
                          ";margin-right:6px;",
                        ],
                      },
                      "displayName": "SearchForm__IconAlert",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SearchForm__IconAlert-hq4lki-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                >
                  <_default
                    className="SearchForm__IconAlert-hq4lki-1 hVBuCK"
                  >
                    <_default
                      className="SearchForm__IconAlert-hq4lki-1 hVBuCK"
                    >
                      <div
                        className="SearchForm__IconAlert-hq4lki-1 hVBuCK"
                      />
                    </_default>
                  </_default>
                </StyledComponent>
              </SearchForm__IconAlert>
              Maximum 3 tag
            </div>
          </StyledComponent>
        </SearchForm__MaxTagsAdded>
      </div>
    </StyledComponent>
  </SearchForm__Wrapper>
</SearchForm>
`;
